--- a/module 05/ex02/Makefile
+++ b/module 05/ex02/Makefile
@@ -3,16 +3,27 @@ NAME = AForm
 COMP = c++
 FLAGS = -Wall -Wextra -Werror
 
-SRC = Bureaucrat.cpp main.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
+SRCS = main.cpp \
+       Bureaucrat.cpp \
+       AForm.cpp \
+       ShrubberyCreationForm.cpp \
+       RobotomyRequestForm.cpp \
+       PresidentialPardonForm.cpp
+	
 OBJ = $(SRC:.cpp=.o)
-HEADER = Bureaucrat.hpp AForm.hpp ShrubberyCreationForm.hpp RobotomyRequestForm.hpp PresidentialPardonForm.hpp
+
+HEADER = Bureaucrat.hpp \
+       AForm.hpp \
+       ShrubberyCreationForm.hpp \
+       RobotomyRequestForm.hpp \
+       PresidentialPardonForm.hpp
 
 all : $(NAME)
 
 $(NAME) : $(OBJ) 
 	$(COMP) $(FLAGS) $^ -o $@
 
-%.o : %.cpp
+%.o : %.cpp $(HEADER)
 	$(COMP) $(FLAGS) -c $< -o $@
 
 clean :
