--- a/module 05/ex02/Makefile
+++ b/module 05/ex02/Makefile
@@ -10,7 +10,7 @@ SRCS = main.cpp \
        RobotomyRequestForm.cpp \
        PresidentialPardonForm.cpp
 	
-OBJ = $(SRC:.cpp=.o)
+OBJ = $(SRCS:.cpp=.o)
 
 HEADER = Bureaucrat.hpp \
        AForm.hpp \
